# Far-Away

./: .env.example  .gitignore  .ruff.toml  DEPLOY.md  Dockerfile  Makefile  PROJECT_OVERVIEW.md  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  pyproject.toml
disastermind/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  cli.py  docker-compose.yml  pyproject.toml  railway.json
disastermind/.github/workflows/: ci.yml
disastermind/alerting/: __init__.py  cap.py
disastermind/api/: FRONTEND_CONTRACT.md  __main__.py  app.py  build.py  server.py  service.py
disastermind/api/app/: __init__.py  _constants.py  _env.py  _errors.py  _persistence.py  factory.py  pagination.py  service.py
disastermind/audit/: backup.py  decision_log.py  retention.py  signing.py
disastermind/benchmarks/: __main__.py  harness.py  report.py
disastermind/clients/field-app/: .gitignore  app.config.ts  app.json  index.ts  package.json  tsconfig.json
disastermind/clients/operator-console/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
disastermind/core/: bus.py  contracts.py
disastermind/demo/: __init__.py  __main__.py  runner.py
disastermind/deploy/k8s/: configmap.yaml  minio.yaml  postgis.yaml
disastermind/diagnostics/: __init__.py  doctor.py  report.py
disastermind/disastermind/: __main__.py  cli.py
disastermind/disastermind/api/: __init__.py  __main__.py  app.py  server.py  service.py
disastermind/disastermind/audit/: decision_log.py
disastermind/disastermind/benchmarks/: __init__.py
disastermind/disastermind/core/: agent.py  config.py
disastermind/disastermind/diagnostics/: __init__.py  __main__.py  checks.py
disastermind/docs/: README.md  architecture.md  openapi.yaml  runbook.md  sequence-diagrams.md
disastermind/evacuation/: PURI_CLEARANCE_REPORT.md  PURI_DISSEMINATION_REPORT.md  PURI_VULNERABILITY_REPORT.md  PURI_ZONE_DECISION.md  __init__.py  calibration.py  clearance.py  decision.py  dissemination.py  risk_trajectory.py  tradeoff.py  vulnerability.py
disastermind/federation/: __init__.py  coordinator.py  model.py
disastermind/fieldapp/: __init__.py  client.py  closure.py  contracts.py
disastermind/hindcast/: AMPHAN_2020_REPORT.md  NATIONAL_CYCLONE_BACKTEST.md  PURI_CAPACITY_REPORT.md  PURI_EVACUATION_REPORT.md  __init__.py  __main__.py  capacity.py  cyclone_backtest.py  evacuation.py  fani.py  replay.py  report.py  terrain.py  walkthrough.py
disastermind/integrations/: __init__.py  health.py
disastermind/live/: __init__.py  __main__.py  ingest.py  resilient.py  system.py  usgs_shadow.py
disastermind/llm/: __init__.py  client.py
disastermind/logconfig/: __init__.py  context.py  core.py  formatter.py
disastermind/migrations/: __init__.py  __main__.py  migrations.py
disastermind/ml/: __init__.py  bootstrap.py  features.py  models.py  registry.py  shadow.py  shadow_season.py  shap_explain.py
disastermind/models/: domain.py  geo.py
disastermind/multi_incident/: manager.py
disastermind/observability/: __init__.py  build.py  collector.py  exposition.py
disastermind/ops/: __init__.py  budget.py  config_check.py  health.py  retry.py  shutdown.py
disastermind/orchestration/: __init__.py  build.py  loop.py
disastermind/persistence/: __init__.py  build.py  persistor.py
disastermind/reporting/: __init__.py  reporter.py
disastermind/resilience/: __init__.py  build.py  harness.py
disastermind/roadnet/: __init__.py  closures.py  graph.py  overpass.py
disastermind/runtime/: consumer.py  runner.py
disastermind/scenarios/: __init__.py  base.py  cyclone_flood.py
disastermind/security/: __init__.py  auth.py  ratelimit.py  validation.py
disastermind/storage/: __init__.py  elasticsearch_audit_repo.py  minio_artifact_store.py  postgis_resource_repo.py  timescale_telemetry_repo.py
disastermind/tests/: conftest.py  test_alerting.py  test_api.py  test_capacity_real.py  test_cascade.py  test_diagnostics.py  test_diagnostics_topics.py  test_dispatch_live.py  test_e2e_earthquake.py  test_federation.py  test_field_closure.py  test_llm.py  test_ml_eval.py  test_ml_training.py  test_multi_incident.py  test_observability.py  test_packaging.py  test_perf.py  test_pipeline_backtest.py  test_roadnet.py  test_runtime.py  test_security.py  test_storage_integration.py  test_tracing.py
disastermind/tracing/: __init__.py  build.py  collector.py  spans.py
(+425 files in other folders)
