[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disastermind"
version = "0.1.0"
description = "Autonomous multi-agent disaster coordination platform (PRD Group A)"
requires-python = ">=3.11"
dependencies = [
    # Core runtime is stdlib-only by design (graceful degradation).
    # Heavy capabilities are optional extras so the system runs degraded
    # without them and the test-suite needs none of them.
]

[project.optional-dependencies]
ml = ["xgboost>=2.0", "scikit-learn>=1.4", "numpy>=1.26", "shap>=0.44"]
optimise = ["pulp>=2.8", "ortools>=9.9"]
geo = ["shapely>=2.0", "pyproj>=3.6"]
bus = ["confluent-kafka>=2.3"]
storage = ["psycopg[binary]>=3.1", "elasticsearch>=8.12", "minio>=7.2"]
feeds = ["httpx>=0.27", "feedparser>=6.0"]
dispatch = ["twilio>=9.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
all = [
    "xgboost>=2.0", "scikit-learn>=1.4", "numpy>=1.26", "shap>=0.44",
    "pulp>=2.8", "ortools>=9.9", "shapely>=2.0", "pyproj>=3.6",
    "confluent-kafka>=2.3", "psycopg[binary]>=3.1", "elasticsearch>=8.12",
    "minio>=7.2", "httpx>=0.27", "feedparser>=6.0", "twilio>=9.0",
]

[tool.setuptools.packages.find]
include = ["disastermind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
